unpackaged/main/default/objects/Merchant_Application__c/Merchant_Application__c.object-meta.xml
<CustomObject>
    <label>Merchant Application</label>
    <nameField>
        <displayFormat>MAPP-{00000}</displayFormat>
        <label>Merchant App Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>