unpackaged/main/default/objects/Merchant_Application__c/fields/Admin_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_User_Email__c</fullName>
    <label>Admin User Email</label>
    <type>Email</type>
</CustomField>