unpackaged/main/default/objects/Merchant_Application__c/fields/Admin_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Admin_User_ID__c</fullName>
    <label>Admin User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>