unpackaged/main/default/objects/Merchant_Application__c/fields/Application_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Created_Date__c</fullName>
    <label>Application Created Date</label>
    <type>DateTime</type>
</CustomField>