unpackaged/main/default/objects/Merchant_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>