unpackaged/main/default/objects/Merchant_Application__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>Converts brand name into record type name for brand on opportunities</description>
    <formula>CASE( Brand__c,

&quot;lawpay&quot;, &quot;LawPay Payments&quot;,
&quot;cpacharge&quot;, &quot;CPACharge&quot;,
&quot;affinipay&quot;, &quot;AffiniPay&quot;,
&quot;clientpay&quot;, &quot;ClientPay&quot;,

&quot;LawPay Payments&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts brand name into record type name for brand on opportunities</inlineHelpText>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>