unpackaged/main/default/objects/Merchant_Application__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date/time application went into completed status</description>
    <inlineHelpText>Date/time application went into completed status</inlineHelpText>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>