unpackaged/main/default/objects/Merchant_Application__c/fields/Finished_Date__c.field-meta.xml
<CustomField>
    <fullName>Finished_Date__c</fullName>
    <description>Date/time application went into finished status</description>
    <inlineHelpText>Date/time application went into finished status</inlineHelpText>
    <label>Finished Date</label>
    <type>DateTime</type>
</CustomField>