unpackaged/main/default/objects/Merchant_Application__c/fields/Last_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Date__c</fullName>
    <label>Last Event Date</label>
    <type>DateTime</type>
</CustomField>