unpackaged/main/default/objects/Merchant_Application__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Payment_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>