unpackaged/main/default/objects/Merchant_Application__c/fields/Merchant_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_App_ID__c</fullName>
    <externalId>true</externalId>
    <label>Merchant App ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>