unpackaged/main/default/objects/Merchant_Application__c/fields/Merchant_UUID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_UUID__c</fullName>
    <description>Internal UUID Created in the VT system for the Merchant account. Intended usage is to a cross system reference for the Merchant</description>
    <externalId>true</externalId>
    <label>Merchant UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>