unpackaged/main/default/objects/Merchant_Application__c/fields/Owner_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email_Address__c</fullName>
    <label>Owner Email Address</label>
    <type>Email</type>
</CustomField>