unpackaged/main/default/objects/Merchant_Application__c/fields/Partner_Token__c.field-meta.xml
<CustomField>
    <fullName>Partner_Token__c</fullName>
    <label>Partner Token</label>
    <length>25</length>
    <type>Text</type>
</CustomField>