unpackaged/main/default/objects/Merchant_Application__c/fields/Pricing_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Plan_ID__c</fullName>
    <label>Pricing Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>