unpackaged/main/default/objects/Merchant_Application__c/fields/Product_Environment__c.field-meta.xml
<CustomField>
    <fullName>Product_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Product Environment Record for VTID with the same VTI as the Application. Linked when Status of Pervisoned received.</inlineHelpText>
    <label>Product Environment</label>
    <referenceTo>Product_Environment__c</referenceTo>
    <relationshipLabel>Merchant Applications</relationshipLabel>
    <relationshipName>Merchant_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>