unpackaged/main/default/objects/Merchant_Application__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>