unpackaged/main/default/objects/Merchant_Application__c/fields/Provisioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Date__c</fullName>
    <description>Date/time application met criteria for being provisioned</description>
    <inlineHelpText>Date/time application met criteria for being provisioned</inlineHelpText>
    <label>Provisioned Date</label>
    <type>DateTime</type>
</CustomField>