unpackaged/main/default/objects/Merchant_Application__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partner</label>
    <referenceTo>Partnerships__c</referenceTo>
    <relationshipLabel>Merchant Applications</relationshipLabel>
    <relationshipName>Merchant_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>