unpackaged/main/default/objects/Merchant_Application__c/fields/Trial_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Trial_Merchant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the application was created in the LP/LPP trial process.</description>
    <inlineHelpText>Indicates if the application was created in the LP/LPP trial process.</inlineHelpText>
    <label>Trial Merchant</label>
    <type>Checkbox</type>
</CustomField>