unpackaged/main/default/objects/Merchant_Application__c/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <label>utm campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>