unpackaged/main/default/objects/Merchant_Application__c/fields/utm_initial_landing_page__c.field-meta.xml
<CustomField>
    <fullName>utm_initial_landing_page__c</fullName>
    <label>utm initial landing page</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>