unpackaged/main/default/objects/Merchant_Application__c/fields/Virtual_Terminal_ID__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Terminal_ID__c</fullName>
    <label>Virtual Terminal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>