unpackaged/main/default/objects/Merchant_Application__c/fields/VT_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>VT_Application_Link__c</fullName>
    <formula>IF(NOT(ISBLANK( Merchant_App_ID__c )),
HYPERLINK(&quot;https://secure.affinipay.com/admin/merchant_applications/&quot;&amp; Merchant_App_ID__c, &quot;VT Merchant Application Link&quot;),

&quot;N/A&quot;

)</formula>
    <inlineHelpText>Link to VT record for the application. VT Access is required to access linked record</inlineHelpText>
    <label>VT Application Link</label>
    <type>Text</type>
</CustomField>