unpackaged/main/default/objects/Merchant_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Merchant_App_ID__c</columns>
    <columns>Brand__c</columns>
    <columns>Merchant_Name__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Admin_User_Email__c</columns>
    <columns>Applicant_First_Name__c</columns>
    <columns>Applicant_Last_Name__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Pricing_Plan_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>